syntax = "proto3";
package trainers;

option go_package = "github.com/bal3000/PokeCentre/proto/trainers";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message AddTrainerRequest {
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
    string nhsNumber = 6;
}

message AddTrainerResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
    string nhsNumber = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message UpdateTrainerRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
    string nhsNumber = 6;
}

message UpdateTrainerResponse {
    bool success = 1;
}

message DeleteTrainerRequest {
    int32 id = 1;
}

message DeleteTrainerResponse {
    bool success = 1;
}

message GetTrainerRequest {
    int32 id = 1;
}

message GetTrainerResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
    string nhsNumber = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message GetTrainerForPatientRequest {
    int32 patientId = 1;
}

message GetTrainerForPatientResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    string phone = 5;
    string nhsNumber = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

service TrainersService {
    rpc AddTrainer(AddTrainerRequest) returns (AddTrainerResponse);
    rpc UpdateTrainer(UpdateTrainerRequest) returns (UpdateTrainerResponse);
    rpc DeleteTrainer(DeleteTrainerRequest) returns (DeleteTrainerResponse);
    rpc GetTrainer(GetTrainerRequest) returns (GetTrainerResponse);
    rpc GetTrainerForPatient(GetTrainerForPatientRequest) returns (GetTrainerForPatientResponse);
    rpc GetAllTrainers(google.protobuf.Empty) returns (stream GetTrainerResponse);
}